[gd_scene load_steps=4 format=3 uid="uid://wmw35wk4nw7w"]

[ext_resource type="Script" uid="uid://d03akmlnlji6i" path="res://Scripts/Main/main.gd" id="1_2peg6"]
[ext_resource type="Script" uid="uid://dt81i7ucl0676" path="res://Scripts/Stages/test_stage_realTest.gd" id="2_6q51q"]
[ext_resource type="PackedScene" uid="uid://rkdbyryukypr" path="res://Scenes/Characters/Mint.tscn" id="2_ohob2"]

[node name="Main" type="Node"]
script = ExtResource("1_2peg6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -20.0
offset_right = 99.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2

[node name="Singleplayer" type="Button" parent="CanvasLayer/MainMenu"]
layout_mode = 2
size_flags_horizontal = 3
text = "Local Match"

[node name="Online" type="Button" parent="CanvasLayer/MainMenu"]
layout_mode = 2
size_flags_horizontal = 3
text = "Online Match"

[node name="MainPanel" type="Window" parent="CanvasLayer"]
oversampling_override = 1.0
initial_position = 1
size = Vector2i(390, 110)
visible = false

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainPanel"]
offset_right = 388.0
offset_bottom = 111.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Panel" type="GridContainer" parent="CanvasLayer/MainPanel/MarginContainer"]
layout_mode = 2
columns = 2

[node name="HostLabel" type="Label" parent="CanvasLayer/MainPanel/MarginContainer/Panel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host:"

[node name="Host" type="LineEdit" parent="CanvasLayer/MainPanel/MarginContainer/Panel"]
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"
placeholder_text = "Host IP"

[node name="PortLabel" type="Label" parent="CanvasLayer/MainPanel/MarginContainer/Panel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Port:"

[node name="Port" type="LineEdit" parent="CanvasLayer/MainPanel/MarginContainer/Panel"]
layout_mode = 2
size_flags_horizontal = 3
text = "9999"

[node name="ServerButton" type="Button" parent="CanvasLayer/MainPanel/MarginContainer/Panel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Server"

[node name="ClientButton" type="Button" parent="CanvasLayer/MainPanel/MarginContainer/Panel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Client"

[node name="Message" type="Label" parent="CanvasLayer"]
offset_right = 1153.0
offset_bottom = 111.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Reset" type="Button" parent="CanvasLayer"]
offset_left = 988.0
offset_top = 595.0
offset_right = 1135.0
offset_bottom = 633.0
text = "Reset"

[node name="SyncLabel" type="Label" parent="CanvasLayer"]
visible = false
offset_right = 40.0
offset_bottom = 23.0
text = "Regaining Sync..."

[node name="World" type="Node2D" parent="."]

[node name="Stage" type="Node2D" parent="World"]

[node name="TestStage" type="Node2D" parent="World/Stage"]
script = ExtResource("2_6q51q")

[node name="Player1" parent="World" instance=ExtResource("2_ohob2")]
position = Vector2(0, -410)

[node name="Player2" parent="World" instance=ExtResource("2_ohob2")]
position = Vector2(0, -410)

[node name="Camera2D" type="Camera2D" parent="World"]
zoom = Vector2(0.5, 0.5)

[connection signal="pressed" from="CanvasLayer/MainMenu/Singleplayer" to="." method="_on_singleplayer_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/Online" to="." method="_on_online_pressed"]
[connection signal="pressed" from="CanvasLayer/MainPanel/MarginContainer/Panel/ServerButton" to="." method="_on_server_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainPanel/MarginContainer/Panel/ClientButton" to="." method="_on_client_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Reset" to="." method="_on_reset_pressed"]
